refactor: use process builder